outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-24_14-22-01/evaluations/problem_eval4925109636081415028_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate and long-term distances based on the progress towards the destination, using an exponential decay factor to prioritize proximity as the tour nears completion.}
                                                                                                                                                                                          ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate and long-term distances based on the progress towards the destination, using an exponential decay factor to prioritize proximity as the tour nears completion.}
                                                                                                                                                                                          ^
SyntaxError: unmatched '}'
